[package]
name = "psf"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
rustube = {version = "0.6.0", features = ["blocking"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.105"
regex = "1.9.5"
poll-promise = "0.3.0"
egui_extras = { version = "0.22.0", features = [
    "image",
    "log"]}
image = { version = "0.24", features = ["jpeg", "png"] }
num-format = "0.4.4"
unescape = "0.1.0"
opener = {version = "0.6.1", features = ["reveal"]}
open = "5.0.0"
url = "2.4.1"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
native-dialog = "0.6.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
